add stock trx in out
