# internal/delivery/api/handler/stock.go
@@ -29,6 +29,7 @@ func NewStock(f factory.Factory) Stock {
 func (h *stock) Route(g *echo.Group) {
 	g.GET("", h.Get, middleware.Authentication)
 	g.GET("/:id", h.GetByID, middleware.Authentication)
+	g.PUT("", h.Transaction, middleware.Authentication)
 }
 
 // Get stock
@@ -89,5 +90,37 @@ func (h *stock) GetByID(c echo.Context) error {
 	if err != nil {
 		return res.ErrorResponse(err).Send(c)
 	}
+	return res.SuccessResponse(result).Send(c)
+}
+
+// Transaction stock
+// @Summary Transaction stock
+// @Description Transaction stock
+// @Tags stock
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param request body dto.TransactionStockRequest true "request body"
+// @Success 200 {object} dto.StockTransactionResponseDoc
+// @Failure 400 {object} res.errorResponse
+// @Failure 404 {object} res.errorResponse
+// @Failure 500 {object} res.errorResponse
+// @Router /api/stocks [put]
+func (h *stock) Transaction(c echo.Context) error {
+	ctx := c.Request().Context()
+
+	payload := new(dto.TransactionStockRequest)
+	if err := c.Bind(&payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.BadRequest, err).Send(c)
+	}
+	if err := c.Validate(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.Validation, err).Send(c)
+	}
+
+	result, err := h.Factory.Usecase.Stock.Transaction(ctx, *payload)
+	if err != nil {
+		return res.ErrorResponse(err).Send(c)
+	}
+
 	return res.SuccessResponse(result).Send(c)
 }
